--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "express": "^4.17.1",
     "knex": "^0.21.12",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^14.14.6",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.0.5"
   }
 }
